--- a/css/controls.css
+++ b/css/controls.css
@@ -1,5 +1,5 @@
 /*************************************************************************
- * GitHub: https://github.com/yenchiah/project-website-template
+ * GitHub: https://github.com/emmywilliams/emmywilliams.github.io
  * Version: v3.29
  * This CSS file has control elements that do not require JavaScript
  * If you want to keep this template updated, avoid modifying this file
