--- a/css/controls.css
+++ b/css/controls.css
@@ -11,7 +11,7 @@
   flex-direction: column;
   flex-wrap: wrap;
   justify-content: flex-start;
-  align-items: stretch;
+  #align-items: stretch;
   align-content: stretch;
   box-sizing: border-box;
   text-decoration: none;
