--- a/css/custom.css
+++ b/css/custom.css
@@ -25,7 +25,7 @@
   -khtml-user-select: text !important;
   -moz-user-select: text !important;
   -ms-user-select: text !important;
-  user-select: text !important;
+ // user-select: text !important;
 }
 
 #share-url-copy-prompt {
